--- a/css/inputs.css
+++ b/css/inputs.css
@@ -152,3 +152,13 @@
 }
 
 
+@media only screen and (max-width: 1024px) and (min-width: 768px)  {
+    .formcontacto__input{
+        height: 55px;        
+        font-size: 15px;
+    }
+
+    .input-label {
+        top: 1.2rem;    
+      }
+}
