--- a/css/product-index.css
+++ b/css/product-index.css
@@ -150,3 +150,93 @@
     flex-direction: row;
     justify-content: space-between;
 }
+
+
+
+/*Tablet*/
+@media only screen and (max-width: 1024px) and (min-width: 768px)  {
+    
+    .productos__linea{
+        width: 90%;
+    }
+    
+    .productos__linea__top h2{
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 26px;
+    }    
+
+    .productos__linea__lista{   
+        gap: 35px 10px;     
+        width: 100%;
+        height: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
+    
+    .productos__linea__lista__item{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 8px;
+        
+        width: 164px;
+        height: 252px;
+    }
+
+    .productos__linea__lista__item img{
+        width: 164px;
+        height: 174px;
+    }
+    
+}
+
+@media only screen and (max-width: 767px) and (min-width: 360px) {
+
+    .productos__linea{
+        width: 90%;
+    }
+    
+    .productos__linea__top h2{
+        font-family: 'Raleway';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 22px;
+        line-height: 26px;
+    }    
+
+    .productos__linea__lista{   
+        gap: 35px 10px;     
+        width: 100%;
+        height: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
+
+    .productos__linea__lista__busqueda{   
+        gap: 35px 10px;     
+        width: 100%;
+        height: 100%;
+        justify-content: flex-start;
+        flex-wrap: wrap;
+    }
+    
+    .productos__linea__lista__item{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0px;
+        gap: 8px;
+        
+        width: 154px;
+        height: 252px;
+    }
+
+    .productos__linea__lista__item img{
+        width: 156px;
+        height: 165px;
+    }
+}
